--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -6956,53 +6956,102 @@ body .footer .copyright {
   width: 100%;
   top: 45%;
 }
-#homePage .section .scroll-icon {
+#homePage .section #scroll-info {
   position: absolute;
-  bottom: 45px;
-  width: 100%;
-  margin: 0 auto;
-  z-index: 999;
-}
-#homePage .section .scroll-icon .btn-scroll7 a span {
-  position: absolute;
-  top: 0;
   left: 50%;
-  width: 18px;
-  height: 18px;
-  margin-left: -8px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-animation: sdb07 2s infinite;
-  animation: sdb07 2s infinite;
-  opacity: 0;
-  box-sizing: border-box;
+  bottom: 30px;
+  margin-left: -50px;
+  width: 100px;
+  height: 45px;
+  z-index: 2;
+  overflow: hidden;
+  -webkit-transform: translate(0, 80px);
+  -moz-transform: translate(0, 80px);
+  -ms-transform: translate(0, 80px);
+  -o-transform: translate(0, 80px);
+  transform: translate(0, 80px);
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  -moz-transition: -moz-transform 0.6s ease-in-out;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
 }
-#homePage .section .scroll-icon .btn-scroll7 a span:nth-of-type(1) {
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
+#homePage .section #scroll-info.show {
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
 }
-#homePage .section .scroll-icon .btn-scroll7 a span:nth-of-type(2) {
-  top: 16px;
-  -webkit-animation-delay: .15s;
-  animation-delay: .15s;
-}
-#homePage .section .scroll-icon .btn-scroll7 a span:nth-of-type(3) {
-  top: 32px;
-  -webkit-animation-delay: .3s;
-  animation-delay: .3s;
-}
-#homePage .section .scroll-icon .btn-scroll {
+#homePage .section #scroll-info a {
   position: relative;
-}
-#homePage .section .scroll-icon a {
-  font-weight: 500;
-  letter-spacing: 1px;
   display: block;
-  font-size: 16px;
-  color: #ffffff;
-  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  color: #1a1a1a;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  letter-spacing: 0.2em;
+  z-index: 1;
+}
+#homePage .section #scroll-info-line {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  width: 80px;
+  height: 2px;
+  overflow: hidden;
+  z-index: 0;
+}
+#homePage .section #scroll-info-line div {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 80px;
+  height: 2px;
+  background-color: #1a1a1a;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: scroll-info-line;
+  animation-name: scroll-info-line;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+}
+@-webkit-keyframes scroll-info-line {
+  from,
+  5% {
+    width: 0px;
+  }
+  33%,
+  66% {
+    left: 0px;
+    width: 80px;
+  }
+  95%,
+  to {
+    left: 80px;
+  }
+}
+@keyframes scroll-info-line {
+  from,
+  5% {
+    width: 0px;
+  }
+  33%,
+  66% {
+    left: 0px;
+    width: 80px;
+  }
+  95%,
+  to {
+    left: 80px;
+  }
 }
 #homePage .section-1 {
   /*Adding background for the slides
