--- a/setfilhome/assets/less/main.less
+++ b/setfilhome/assets/less/main.less
@@ -305,7 +305,7 @@ body {
         	left:50%;
         	bottom:30px;
         	margin-left: -50px;
-        	width: 100px;
+        	width: 90px;
         	height: 45px;
 
         	z-index:2;
@@ -338,7 +338,7 @@ body {
         	width: 100%;
         	height: 100%;
         	padding: 10px;
-        	color: #1a1a1a;
+        	color: #ffffff;
         	font-size: 14px;
         	font-weight: 700;
         	line-height:1;
@@ -351,7 +351,7 @@ body {
         	position:absolute;
         	left: 10px;
         	bottom: 10px;
-        	width:80px;
+        	width: 70px;
         	height:2px;
         	overflow:hidden;
         	z-index: 0;
@@ -360,9 +360,9 @@ body {
         	position:absolute;
         	left: 0;
         	top: 0;
-        	width:80px;
+        	width:70px;
         	height:2px;
-        	background-color:#1a1a1a;
+        	background-color: #ffffff;
 
         	-webkit-animation-duration: 1.5s;
         	        animation-duration: 1.5s;
