--- a/setfilhome/assets/styles/styles.css
+++ b/setfilhome/assets/styles/styles.css
@@ -6961,7 +6961,7 @@ body .footer .copyright {
   left: 50%;
   bottom: 30px;
   margin-left: -50px;
-  width: 100px;
+  width: 90px;
   height: 45px;
   z-index: 2;
   overflow: hidden;
@@ -6988,7 +6988,7 @@ body .footer .copyright {
   width: 100%;
   height: 100%;
   padding: 10px;
-  color: #1a1a1a;
+  color: #ffffff;
   font-size: 14px;
   font-weight: 700;
   line-height: 1;
@@ -7000,7 +7000,7 @@ body .footer .copyright {
   position: absolute;
   left: 10px;
   bottom: 10px;
-  width: 80px;
+  width: 70px;
   height: 2px;
   overflow: hidden;
   z-index: 0;
@@ -7009,9 +7009,9 @@ body .footer .copyright {
   position: absolute;
   left: 0;
   top: 0;
-  width: 80px;
+  width: 70px;
   height: 2px;
-  background-color: #1a1a1a;
+  background-color: #ffffff;
   -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s;
   -webkit-animation-fill-mode: both;
